# Ray_Tracing_On_The_Way

./: .gitignore  CMakeLists.txt  README.md  any.ppm  main.cpp  main_backup.cpp  scene.cpp  scene.h  share_main  static_main  test_texture_channel.ppm
GlobalInclude/: bounds.h  bvh.h  camera.h  hitable.h  hitableList.h  imageTexture.hsdfasd  material.h  random.h  sphere.h  textures.h  triangle.h  triangleList.h  vertex.h
GlobalInclude/Chapter/: Perlin.h  box.h  diffuse_light.h
GlobalInclude/basic/: ray.h  vec3.h
Models/bunny/: proccess_bunny.py
Pic/gallery/: 3200balls_without_accel_512_512_5spp_366seconds.ppm  512_512_900sphere_500tris_10spp_593seconds.ppm  ImageTexture.ppm  LoadModels.ppm  MirrorBunny_1k_prims_400_400_50spp_95s.ppm  MultiTriangles.ppm  Multi_Tris.ppm  SampleRGB.ppm  SkyBox.ppm  TestTriangle.ppm  TestTriangleList.ppm  bunny_flow0.ppm
Pic/gallery/0106/: 3200balls_512_512_5spp_30seconds.ppm  60s.ppm  66sNAIVE.ppm  sss.ppm  with_skybox_1spp_30s.ppm
Pic/gallery/0108/: bvh_bunny_200_200_1spp_1500prims_24s.ppm  naive_bunny_200_200_1spp_1500prims_15s.ppm  naive_scene_512_512_1spp_900spheres_20s.ppm
Source/: bounds.cpp  box.cpp  bvh.cpp  camera.cpp  hitableList.cpp  imageTexture.cpapsdfas  material.cpp  perlin.cpp  sphere.cpp  textures.cpp  triangle.cpp  triangleList.cpp
Trash/: primitive.cuh
app/01_test_basic_geo/: CMakeLists.txt  main.cpp  scene.cpp  scene.h
app/02_test_sky_box/: CMakeLists.txt  main.cpp  scene.cpp  scene.h
app/03_test_load_model/: CMakeLists.txt  main.cpp  scene.cpp  scene.h
app/04_test_global_scene/: CMakeLists.txt  main.cpp  scene.cpp
client/: package-lock.json  package.json
client/src/: App.vue  main.js
client/src/components/: ControlBar.vue  FooterPannel.vue  MainPannel.vue  RenderOptionMenu.vue  SiderPannel.vue
client/src/components/RenderOptionMenu/: MenuItem.vue
client/src/components/SiderPannel/: SiderBarChart.vue  SiderDonut.vue
client/src/js/sceneInteraction/: math.js
client/src/store/: controlBar.js  footerPannel.js  index.js  mainPannel.js  siderMenu.js  siderPannel.js
gen_pic/: Random_Sample_Correct.ppm  any.ppm  bvh.ppm  bvh_changed_1spp_diffuse.ppm  bvh_changed_1spp_glass.ppm  bvh_changed_1spp_mental.ppm  bvh_changed_5spp.ppm  bvh_complex_scene.ppm  bvh_tree_result_diffuse.ppm  bvh_tree_result_glass.ppm  bvh_tree_result_mental.ppm  correct_naive_result_diffuse.ppm  correct_naive_result_glass.ppm  correct_naive_result_mental.ppm  direct_cast_ray_1spp_still_bug.ppm  direct_cast_ray_20spp_8.9s.ppm  direct_cast_ray_50spp_21.9s.ppm  direct_cast_ray_5spp_still_bug.ppm  incorrect_whitted_styled_100spp_26.6s.ppm  incorrect_whitted_styled_20spp_5.2s.ppm  mental_bounce_depth=1_naive.ppm  naive.ppm  navie_complex_scene.ppm  sampleLight1spp.ppm  sampleLight5spp.ppm  sampleLight5spp_littleSkyBox.ppm  simple.ppm  weirdGhostBlue.ppm  weirdGhostGreen.ppm  weirdGhostRed.ppm
include/: foo.cuh
include/accel/: bounds.cuh  bounds.h  bvh.cuh  bvh.h
include/camera/: camera.cuh  camera.h
include/material/: dielectric.cuh  dielectric.h  diffuse_light.cuh  diffuse_light.h  lambertian.cuh  lambertian.h  material.cuh  material.h  mental.cuh  mental.h
include/math/: common_math_device.cuh  device_rand.cuh  random.h  transform.h
include/object/: hitable.cuh  hitable.h
include/object/geometry/: box.h  sphere.cuh  sphere.h
include/object/group/: hitableList.cuh  hitableList.h  hitable_list.cuh
include/object/model/: models copy.cuh  models.cuh  models.h
include/object/primitive/: primitive.h  triangle.cuh  triangle.h
include/output/: output.cuh
include/server/: onMessageRouter.h
include/texture/: perlin.cuh  textures.cuh  textures.h
include/utils/: ray.cuh  ray.h  vec3.cuh  vec3.h  vertex.cuh  vertex.h
src/: foo.cu  global_init.cu  global_init.cuh  main.cpp  main.cu  render.cu  render.h
src/accel/: CMakeLists.txt  bounds.cpp  bounds.h  bvh.cpp
src/camera/: CMakeLists.txt  camera.cpp  camera.cu  camera.cuh  camera.h  cast_ray.cu  cast_ray.cuh
src/material/: CMakeLists.txt  dielectric.cpp  dielectric.h  diffuseLight.cpp  diffuse_light.h  lambertian.cpp  lambertian.cu  lambertian.cuh  lambertian.h  material.cpp  material.cu  material.cuh  material.h  mental.cpp  mental.h
src/math/: CMakeLists.txt  random.cpp  random.h  transform.cpp  transform.h
src/model/: CMakeLists.txt  models.cu
src/object/: CMakeLists.txt  hitable.cpp  hitable.cu  hitable.cuh  hitable.h
src/object/geometry/: box.cpp  box.h  sphere.cpp  sphere.cu  sphere.cuh  sphere.h
src/object/group/: hitableList.cpp  hitableList.cu  hitableList.cuh
src/object/model/: models.cpp  models.h
src/object/primitive/: primitive.cpp  triangle.cpp  triangle.h
src/server/: onMsgRouter.cpp
src/texture/: CMakeLists.txt  perlin.cpp  perlin.h  textures.cpp  textures.h
trash/: cast_ray.cu  cast_ray.cuh
trash/accel/: bounds.cu  bounds.cuh  bvh.cu  bvh.cuh
trash/primitive/: primitive.cu  primitive.cuh  triangle.cu  triangle.cuh
trash/texture/: perlin.cu  perlin.cuh  textures.cu  textures.cuh
